# libKore

./: .gitignore  README.md
doc/: Doxyfile
resources/: kore.qrc
source/: CMakeLists.txt
source/inc/: BlockMacros.hpp  KoreApplication.hpp  KoreEngine.hpp  KoreExport.hpp  KoreModule.hpp  Macros.hpp  Macros_GCC.hpp  Macros_MSVC.hpp  ModuleMacros.hpp  Types.hpp
source/inc/data/: Block.hpp  BlockExtension.hpp  BlockFactory.hpp  BlockMacros.hpp  BlockSettings.hpp  DefaultBlockAllocator.hpp  Library.hpp  LibraryT.hpp  MetaBlock.hpp  MetaBlockT.hpp  PointerTypes.hpp  hdrs_data.txt
source/inc/event/: ErrorEvent.hpp  KoreEvent.hpp  hdrs_event.txt
source/inc/memory/: MemoryManager.hpp  SimpleMemoryManager.hpp  hdrs_memory.txt
source/inc/parallel/: MetaTasklet.hpp  Tasklet.hpp  TaskletMacros.hpp  TaskletRunner.hpp  hdrs_parallel.txt
source/inc/plugin/: Loadable.hpp  Module.hpp  ModuleMacros.hpp  PluginInterface.hpp  PluginsManager.hpp  hdrs_plugin.txt
source/inc/serialization/: BlockDeflater.hpp  BlockInflater.hpp  Dumper.hpp  KoreV1.hpp  Loader.hpp  ProgressCallback.hpp  Structures.hpp  hdrs_serialization.txt
source/inc/system/: CPU.hpp  hdrs_system.txt
source/inc/util/: CRC32.hpp  hdrs_util.txt
source/src/: KoreApplication.cpp  KoreEngine.cpp  KoreModule.cpp
source/src/data/: Block.cpp  Block.cxx  BlockExtension.cpp  BlockFactory.cpp  Library.cpp  Library.cxx  LibraryT.cxx  MetaBlock.cpp  srcs_data.txt
source/src/event/: ErrorEvent.cpp  KoreEvent.cpp  srcs_event.txt
source/src/memory/: SimpleMemoryManager.cpp  srcs_memory.txt
source/src/parallel/: MetaTasklet.cpp  Tasklet.cpp  TaskletRunner.cpp  srcs_parallel.txt
source/src/plugin/: Module.cpp  PluginsManager.cpp  srcs_plugin.txt
source/src/serialization/: Dumper.cpp  KoreV1.cpp  Loader.cpp  srcs_serialization.txt
source/src/system/: CPU_GCC.cpp  CPU_MSVC.cpp  srcs_system.txt
source/src/util/: CRC32.cpp  srcs_util.txt
